assets/stylesheets/game.css
html {
  background: navy;
  background-size: cover;
}

.controls {
  /* background-image: url('../images/controls.png'); */
  height: 1px;
  width: 1px;
  background-size: 100%;
  background-repeat: no-repeat;
  margin-top: 16px;
}

.obstacle-container {
  display: flex;
  flex-direction: column;
  justify-content: space-evenly;
  align-items: center;
  width: 100%;
  font-size: 20px;
  font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
  margin-top: 0px;
}

.obstacles {
  background-image: url('../images/rock.png');
  height: 50px;
  width: 50px;
  background-size: 100%;
  background-repeat: no-repeat;
}

.life-container {
  display: flex;
  flex-direction: column;
  justify-content: space-evenly;
  align-items: center;
  width: 100%;
  font-size: 20px;
  font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
  margin-top: 0px;
}

.life {
  background-image: url('../images/turbo.png');
  height: 50px;
  width: 50px;
  background-size: 100%;
  background-repeat: no-repeat;
}

.cash-container {
  display: flex;
  flex-direction: column;
  justify-content: space-evenly;
  align-items: center;
  width: 100%;
  font-size: 20px;
  font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
  margin-top: 0px;
}

.cash {
  background-image: url('../images/money.png');
  height: 50px;
  width: 50px;
  background-size: 100%;
  background-repeat: no-repeat;
}

.key {
  
  height: 35px;
  width: 35px;
  font-size: 32px;
  background-size: 100%;
  background-repeat: no-repeat;
  border: 5px solid black;
  background-color: rgba(200,200,200, 0.8);
  display: flex;
  justify-content: center;
  align-items: center;
}

.time-bar-container {
  
  font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
  
}

.game-container {
  display: flex;
  align-items: center;
  height: -webkit-fill-available;
  height: fill-available;
  justify-content: space-around;
}

.instructions {
  height: 250px;
  width: 640px;
  background-color: rgba(255,255,255, 0.6);
  margin-bottom: 2px;
}

.distractortask {
  height: 250px;
  width: 600px;
  background-color: rgba(255,255,255, 0.6);
  
  font-size: 64px;
  display: flex;
  justify-content: center;
  align-items: center;
  font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
  border: 20px solid black;
}



.title {
  font-size: 32px;
  text-align: center;
  font-style: normal;
  margin-top: 5px;
  font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
}

.info {
  position: relative;
}

#slow {
  position: absolute;
  padding: 150px 0 0 90px;
  color: white;
  font-size: 78px;
  font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
  font-style: oblique;
}

.score-container {
  color: black;
  text-align: center;
  font-size: 46px;
  line-height: 52px;
  font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
  display: flex;
  justify-content: center;
  transition: all .5s ease;
}

.score-value {
  color: black;
  padding-left: 10px;
  font-size: 46px;
  transition: all .2s ease;
}

.score-value--mod {
  color: limegreen;
  font-size: 58px;
  transition: all .01s ease;
}

.lives-container {
  color: black;
  text-align: center;
  font-size: 32px;
  line-height: 40px;
  font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
  display: flex;
  justify-content: center;
}

.lives-value {
  color: black;
  font-size: 32px;
  padding-left: 10px;
  transition: all .2s ease;
}

.lives-value--red {
  color: red;
  font-size: 50px;
  transition: all .01s ease;
}

.lives-value--green {
  color: limegreen;
  font-size: 50px;
  transition: all .01s ease;
}

#play-btn {
  background-image: url('../images/start.png');
  background-size: 100%;
  background-repeat: no-repeat;
  height: 200px;
  position: absolute;
  width: 200px;
  border-radius: 50%;
  display: inline-block;
  margin-top: 250px;
  display: flex;
  justify-content: center;
  align-items: center;
  color: white;
  font-size: 50px;
  font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
  text-align: center;
  cursor: pointer;
}

#splash {
  display: flex;
  justify-content: center;
}

.justify {
  margin-top: 30px;
  display: flex;
  justify-content: center;
  flex-direction: row;
  align-items: center;
}

.column2 {
  display: flex;
  justify-content: center;
  flex-direction: column;
  align-items: bottom;
}

.github {
  /* background-image: url('../images/github.png'); */
  background-repeat: no-repeat;
  background-size: cover;
  height: 50px;
  width: 50px;}

.linkedin {
  /* background-image: url('../images/linkedin.png'); */
  background-repeat: no-repeat;
  background-size: cover;
  height: 50px;
  width: 50px;}

.social {
  display: flex;
  height: 7%;
  justify-content: space-around;
  margin-top: 76px;
}

#how {
  position: absolute;
  text-align: center;
  font-size: 20px;
  background: aliceblue;
  /* border-radius: 14px; */
  padding: 134px 25px 535px 25px;
  /* margin-top: 100px; */
  font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
  opacity: .6;
  /* font-style: oblique; */
  letter-spacing: 1.7px;
}

#myProgress {
  margin-top: 10px;
  width: 100%;
  background-color: grey;
}

#myBar {
  width: 1%;
  height: 30px;
  background-color: green;
}

#distractorProgress {
  margin-top: 10px;
  width: 100%;
  background-color: grey;
}


#distractorBar {
  width: 1%;
  height: 30px;
  background-color: green;
} 

